LocalStorage de los colores agreados completamente

--- a/public/index/css/colors/blue.css
+++ b/public/index/css/colors/blue.css
@@ -21,7 +21,7 @@
 .social-list .social-icon:hover,
 .testimonial-box .testi-img .quote-icon,
 .faq .icon {
-    color: #3f8efc !important;
+    color: #EF4B4B !important;
 }
 
 
