--- a/public/index/css/colors/light.css
+++ b/public/index/css/colors/light.css
@@ -9,7 +9,7 @@
 .social-list .social-icon:hover,
 .testimonial-box .testi-img .quote-icon,
 .faq .icon {
-    color: #FFF !important;
+    color: #EF4B4B !important;
 }
 
 
