--- a/public/index/css/colors/warning.css
+++ b/public/index/css/colors/warning.css
@@ -21,7 +21,7 @@
 .social-list .social-icon:hover,
 .testimonial-box .testi-img .quote-icon,
 .faq .icon {
-    color: #f4b942 !important;
+    color: #EF4B4B !important;
 }
 
 /* background-color */
