--- a/public/index/css/colors/light.css
+++ b/public/index/css/colors/light.css
@@ -108,3 +108,6 @@
 .feature-icon{
     background-color: rgba(0, 0, 0, 0.8);
 }
+.method .nav-item .nav-link.active {
+    background-color: #49C6E5;
+}
