--- a/public/css/pp.css
+++ b/public/css/pp.css
@@ -180,3 +180,11 @@ form .page .btns button.next{
   display: block;
   color: #fff;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] { -moz-appearance:textfield; }
