--- a/public/index/css/colors/dark.css
+++ b/public/index/css/colors/dark.css
@@ -120,3 +120,25 @@ body.bg-home4 {
     background-color: #F23849;
 }
 
+
+form .page .field button{
+    width: 100%;
+    height: calc(100% + 5px);
+    border: none;
+    margin-top: -20px;
+    border-radius: 5px;
+    background-color: #F4B942;
+    color: #000;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: 0.5s ease;
+  }
+  .container p, div.label{
+    color: #000;
+  }
+  form .page .field button:hover{
+    background: #f1a712;
+  }
