--- a/public/index/css/colors/green.css
+++ b/public/index/css/colors/green.css
@@ -1,4 +1,4 @@
-/* success.css */
+ /* success.css */
 
 
 /* color */
@@ -108,3 +108,22 @@
 .method .nav-item .nav-link.active {
     background-color: #06BA63;
 }
+
+form .page .field button{
+    width: 100%;
+    height: calc(100% + 5px);
+    border: none;
+    margin-top: -20px;
+    border-radius: 5px;
+    background-color: #06BA63;
+    color: #fff;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: 0.5s ease;
+  }
+  form .page .field button:hover{
+    background: #048949;
+  }
