--- a/public/index/css/colors/info.css
+++ b/public/index/css/colors/info.css
@@ -112,3 +112,22 @@
 .method .nav-item .nav-link.active {
     background-color: #49C6E5;
 }
+
+form .page .field button{
+    width: 100%;
+    height: calc(100% + 5px);
+    border: none;
+    margin-top: -20px;
+    border-radius: 5px;
+    background-color: #49C6E5;
+    color: #fff;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: 0.5s ease;
+  }
+  form .page .field button:hover{
+    background: #1fb6dc;
+  }
