--- a/public/index/css/colors/warning.css
+++ b/public/index/css/colors/warning.css
@@ -112,3 +112,22 @@
     color: #000;
     background-color: #F4B942;
 }
+
+form .page .field button{
+    width: 100%;
+    height: calc(100% + 5px);
+    border: none;
+    margin-top: -20px;
+    border-radius: 5px;
+    background-color: #F4B942;
+    color: #000;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: 0.5s ease;
+  }
+  form .page .field button:hover{
+    background: #f1a712;
+  }
