cruds faltantas, videos, comentarios, uploads y tablas agregadas

--- a/public/css/sidebar/style.css
+++ b/public/css/sidebar/style.css
@@ -74815,3 +74815,8 @@ textarea.form-control {
 }
 
 /*# sourceMappingURL=style.css.map */
+
+li.paginate_button:nth-child(2) > a:nth-child(1):hover, li.paginate_button:nth-child(3) > a:nth-child(1):hover{
+    background-color: #0D6EFD;
+    color: white;
+}
